<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_club_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:text="@string/my_club_name"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/versus_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/versus_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_club_opponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:text="@string/opponent_name"
            android:textAlignment="textStart"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/my_club_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/my_club_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_table_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_club_cl_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NO"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/my_club_red_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_club_yellow_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_club_penalty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_club_corners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goals"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/table_position"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/champions_league"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_cards"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yellow_cards"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/penalties"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corners"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/opponent_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/opponent_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/opponent_table_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="6"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/opponent_cl_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="NO"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/opponent_red_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/opponent_yellow_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/opponent_penalties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/opponent_corners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addMyClubGoal"
                android:text="@string/btn_goal"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addMyClubRedCard"
                android:text="@string/btn_red_card"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addMyClubYellowCard"
                android:text="@string/btn_yellow_card"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addMyClubPenalty"
                android:text="@string/btn_penalty"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addMyClubCorner"
                android:text="@string/btn_corner"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOpponentGoal"
                android:text="@string/btn_goal"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOpponentRedCard"
                android:text="@string/btn_red_card"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOpponentYellowCard"
                android:text="@string/btn_yellow_card"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOpponentPenalty"
                android:text="@string/btn_penalty"
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOpponentCorner"
                android:text="@string/btn_corner"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetAll"
            android:text="@string/reset_button" />
    </LinearLayout>

</LinearLayout>
